cmake_minimum_required(VERSION 3.31)
project(cProgramming C)

set(CMAKE_C_STANDARD 11)

add_executable(cProgramming main.c
        pattern01.c
        Assignment/array.c
        matrix.c
        alternatesterzero.c
        Assignment/stack.c
        pattern03.c
        spiral.c
        Assignment/queue.c
        pactices/matrix01.c
)
