cmake_minimum_required(VERSION 3.31)
project(cProgramming C)

set(CMAKE_C_STANDARD 11)

add_executable(cProgramming main.c
        pattern01.c
        matrix.c
        alternatesterzero.c
        pattern03.c
        spiral.c
        pactices/matrix01.c
        problem06.c
        pactices/pyramidStar.c
        Assignment/linearSearch.c
)
